components/example-2/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: example
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: example-2
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elexample-2
  namespace: atest
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-example-2
    weight: null
status: {}
